change List.of to arrays.asList